src/main/java/com/example/demo/error/custom/CustomObjectAlreadyExist.java
package com.example.demo.error.custom;

public class CustomObjectAlreadyExist extends RuntimeException {

	private static final long serialVersionUID = 1L;

	public CustomObjectAlreadyExist(String message) {
		super(message);
	}
	
}
